# mutual-fund-mantis

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
core/: nav_analyzer.py
sample_data/: isin.csv  reponse.json  request.sh
